[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-openxr/scenes/first_person_controller_vr.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Player/Lenkrad.tres" type="Material" id=4]
[ext_resource path="res://Player/SitzColor.tres" type="Material" id=5]
[ext_resource path="res://Player/Amaturen.tres" type="Material" id=6]
[ext_resource path="res://Player/CarColor.tres" type="Material" id=7]
[ext_resource path="res://Player/Spiegel.tres" type="Material" id=8]
[ext_resource path="res://Player/FadeInShader.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/GameOver.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player/CollisionEnd.tscn" type="PackedScene" id=11]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1, 0.737166 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.237474, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.4, 0.298176, -0.205581, 0.657355 )
shape = SubResource( 1 )

[node name="FadeInShader" parent="." instance=ExtResource( 9 )]

[node name="Control2" parent="." instance=ExtResource( 10 )]
visible = false

[node name="CollisionEnd" parent="." instance=ExtResource( 11 )]
visible = false

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
margin_left = 820.0
margin_top = 6.0
margin_right = 917.0
margin_bottom = 23.0
rect_scale = Vector2( 2, 2 )
text = "Time left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.384516, -1.17823 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.9, 0, 0, 0, 0.2, 0, 0, 0, 1, 0.452699, -0.919489, 0.330709 )
shape = SubResource( 2 )

[node name="Player" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.516788, 0.191763, 0 )
mesh = ExtResource( 3 )
material/0 = ExtResource( 7 )
material/1 = ExtResource( 5 )
material/2 = ExtResource( 5 )
material/3 = ExtResource( 4 )
material/4 = ExtResource( 6 )
material/5 = ExtResource( 7 )
material/6 = ExtResource( 7 )
material/7 = ExtResource( 8 )
material/8 = ExtResource( 8 )

[node name="FPController" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.813674, -0.766347, 0.626021 )
start_passthrough = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512.548, 299.68 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.38471, 0 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="failed_initialisation" from="FPController" to="." method="_on_FPController_failed_initialisation"]
